grama/ParGramatyka.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.12 from grama/ParGramatyka.y
-----------------------------------------------------------------------------

state 6 contains 1 shift/reduce conflicts.
state 89 contains 18 reduce/reduce conflicts.

rule 46 is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	Ident -> L_ident                                   (1)
	Integer -> L_integ                                 (2)
	String -> L_quoted                                 (3)
	Program -> ListDecl                                (4)
	Decl -> BasicType ListVarDeclItem ';'              (5)
	Decl -> ArrType ListVarDeclItem ';'                (6)
	Decl -> BasicType Ident '(' ListFuncDeclItem ')' '{' ListDecl ListStmt 'return' Expr ';' '}'   (7)
	ListDecl ->                                        (8)
	ListDecl -> ListDecl Decl                          (9)
	VarDeclItem -> Ident                               (10)
	VarDeclItem -> Ident '=' Expr                      (11)
	ListVarDeclItem -> VarDeclItem                     (12)
	ListVarDeclItem -> VarDeclItem ',' ListVarDeclItem   (13)
	FuncDeclItem -> BasicType Ident                    (14)
	ListFuncDeclItem ->                                (15)
	ListFuncDeclItem -> FuncDeclItem                   (16)
	ListFuncDeclItem -> FuncDeclItem ',' ListFuncDeclItem   (17)
	Block -> '{' ListStmt '}'                          (18)
	Assign -> Ident ListAcc '=' Expr                   (19)
	ListAssign ->                                      (20)
	ListAssign -> Assign                               (21)
	ListAssign -> Assign ',' ListAssign                (22)
	Stmt -> ';'                                        (23)
	Stmt -> 'if' '(' Expr ')' Block                    (24)
	Stmt -> 'if' '(' Expr ')' Block 'else' Block       (25)
	Stmt -> 'while' '(' Expr ')' Block                 (26)
	Stmt -> 'for' '(' Decl ListExpr ';' ListAssign ')' Block   (27)
	Stmt -> Assign ';'                                 (28)
	Stmt -> Expr ';'                                   (29)
	Stmt -> CountCost ';'                              (30)
	ListStmt ->                                        (31)
	ListStmt -> ListStmt Stmt                          (32)
	BasicType -> 'int'                                 (33)
	BasicType -> 'string'                              (34)
	BasicType -> 'bool'                                (35)
	ArrType -> BasicType ListAcc                       (36)
	Literal -> Integer                                 (37)
	Literal -> String                                  (38)
	Literal -> 'true'                                  (39)
	Literal -> 'false'                                 (40)
	Acc -> '[' Expr ']'                                (41)
	ListAcc ->                                         (42)
	ListAcc -> ListAcc Acc                             (43)
	Expr7 -> Literal                                   (44)
	Expr7 -> GetCost                                   (45)
	Expr7 -> '(' Expr ')'                              (46)
	Expr7 -> Ident '(' ListExpr ')'                    (47)
	Expr7 -> Ident ListAcc                             (48)
	Expr7 -> '(' Expr ')'                              (49)
	Expr6 -> '-' Expr7                                 (50)
	Expr6 -> '!' Expr7                                 (51)
	Expr6 -> Expr7                                     (52)
	Expr5 -> Expr5 MulOp Expr6                         (53)
	Expr5 -> Expr6                                     (54)
	Expr4 -> Expr4 AddOp Expr5                         (55)
	Expr4 -> Expr5                                     (56)
	Expr3 -> Expr3 RelOp Expr4                         (57)
	Expr3 -> Expr4                                     (58)
	Expr2 -> Expr2 EqOp Expr3                          (59)
	Expr2 -> Expr3                                     (60)
	Expr1 -> Expr2 AndOp Expr1                         (61)
	Expr1 -> Expr2                                     (62)
	Expr -> Expr1 OrOp Expr                            (63)
	Expr -> Expr1                                      (64)
	ListExpr ->                                        (65)
	ListExpr -> Expr                                   (66)
	ListExpr -> Expr ',' ListExpr                      (67)
	Op -> AddOp                                        (68)
	Op -> MulOp                                        (69)
	Op -> RelOp                                        (70)
	Op -> EqOp                                         (71)
	Op -> AndOp                                        (72)
	Op -> OrOp                                         (73)
	AddOp -> '+'                                       (74)
	AddOp -> '-'                                       (75)
	MulOp -> '*'                                       (76)
	MulOp -> '/'                                       (77)
	MulOp -> '%'                                       (78)
	RelOp -> '<'                                       (79)
	RelOp -> '<='                                      (80)
	RelOp -> '>'                                       (81)
	RelOp -> '>='                                      (82)
	EqOp -> '=='                                       (83)
	EqOp -> '!='                                       (84)
	AndOp -> '&&'                                      (85)
	OrOp -> '||'                                       (86)
	CountCost -> 'count' Ident 'read_cost' Expr 'with' Ident   (87)
	CountCost -> 'count' Ident 'write_cost' Expr 'with' Ident   (88)
	CountCost -> 'count' Op 'cost' Expr 'with' Ident   (89)
	GetCost -> 'get' 'read_cost' Ident                 (90)
	GetCost -> 'get' 'write_cost' Ident                (91)
	GetCost -> 'get' 'cost' Op                         (92)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'&&'           { PT _ (TS _ 4) }
	'('            { PT _ (TS _ 5) }
	')'            { PT _ (TS _ 6) }
	'*'            { PT _ (TS _ 7) }
	'+'            { PT _ (TS _ 8) }
	','            { PT _ (TS _ 9) }
	'-'            { PT _ (TS _ 10) }
	'/'            { PT _ (TS _ 11) }
	';'            { PT _ (TS _ 12) }
	'<'            { PT _ (TS _ 13) }
	'<='           { PT _ (TS _ 14) }
	'='            { PT _ (TS _ 15) }
	'=='           { PT _ (TS _ 16) }
	'>'            { PT _ (TS _ 17) }
	'>='           { PT _ (TS _ 18) }
	'['            { PT _ (TS _ 19) }
	']'            { PT _ (TS _ 20) }
	'bool'         { PT _ (TS _ 21) }
	'cost'         { PT _ (TS _ 22) }
	'count'        { PT _ (TS _ 23) }
	'else'         { PT _ (TS _ 24) }
	'false'        { PT _ (TS _ 25) }
	'for'          { PT _ (TS _ 26) }
	'get'          { PT _ (TS _ 27) }
	'if'           { PT _ (TS _ 28) }
	'int'          { PT _ (TS _ 29) }
	'read_cost'    { PT _ (TS _ 30) }
	'return'       { PT _ (TS _ 31) }
	'string'       { PT _ (TS _ 32) }
	'true'         { PT _ (TS _ 33) }
	'while'        { PT _ (TS _ 34) }
	'with'         { PT _ (TS _ 35) }
	'write_cost'   { PT _ (TS _ 36) }
	'{'            { PT _ (TS _ 37) }
	'||'           { PT _ (TS _ 38) }
	'}'            { PT _ (TS _ 39) }
	L_ident        { PT _ (TV $$) }
	L_integ        { PT _ (TI $$) }
	L_quoted       { PT _ (TL $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	Ident           rule  1
	Integer         rule  2
	String          rule  3
	Program         rule  4
	Decl            rules 5, 6, 7
	ListDecl        rules 8, 9
	VarDeclItem     rules 10, 11
	ListVarDeclItem rules 12, 13
	FuncDeclItem    rule  14
	ListFuncDeclItem rules 15, 16, 17
	Block           rule  18
	Assign          rule  19
	ListAssign      rules 20, 21, 22
	Stmt            rules 23, 24, 25, 26, 27, 28, 29, 30
	ListStmt        rules 31, 32
	BasicType       rules 33, 34, 35
	ArrType         rule  36
	Literal         rules 37, 38, 39, 40
	Acc             rule  41
	ListAcc         rules 42, 43
	Expr7           rules 44, 45, 46, 47, 48, 49
	Expr6           rules 50, 51, 52
	Expr5           rules 53, 54
	Expr4           rules 55, 56
	Expr3           rules 57, 58
	Expr2           rules 59, 60
	Expr1           rules 61, 62
	Expr            rules 63, 64
	ListExpr        rules 65, 66, 67
	Op              rules 68, 69, 70, 71, 72, 73
	AddOp           rules 74, 75
	MulOp           rules 76, 77, 78
	RelOp           rules 79, 80, 81, 82
	EqOp            rules 83, 84
	AndOp           rule  85
	OrOp            rule  86
	CountCost       rules 87, 88, 89
	GetCost         rules 90, 91, 92

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'bool'         reduce using rule 8
	'int'          reduce using rule 8
	'string'       reduce using rule 8
	%eof           reduce using rule 8

	Program        goto state 3
	ListDecl       goto state 4

State 1


	L_ident        shift, and enter state 2


State 2

	Ident -> L_ident .                                  (rule 1)

	'!='           reduce using rule 1
	'%'            reduce using rule 1
	'&&'           reduce using rule 1
	'('            reduce using rule 1
	')'            reduce using rule 1
	'*'            reduce using rule 1
	'+'            reduce using rule 1
	','            reduce using rule 1
	'-'            reduce using rule 1
	'/'            reduce using rule 1
	';'            reduce using rule 1
	'<'            reduce using rule 1
	'<='           reduce using rule 1
	'='            reduce using rule 1
	'=='           reduce using rule 1
	'>'            reduce using rule 1
	'>='           reduce using rule 1
	'['            reduce using rule 1
	']'            reduce using rule 1
	'read_cost'    reduce using rule 1
	'with'         reduce using rule 1
	'write_cost'   reduce using rule 1
	'||'           reduce using rule 1


State 3

	%start_pProgram -> Program .                        (rule 0)

	%eof           accept


State 4

	Program -> ListDecl .                               (rule 4)
	ListDecl -> ListDecl . Decl                         (rule 9)

	'bool'         shift, and enter state 8
	'int'          shift, and enter state 9
	'string'       shift, and enter state 10
	%eof           reduce using rule 4

	Decl           goto state 5
	BasicType      goto state 6
	ArrType        goto state 7

State 5

	ListDecl -> ListDecl Decl .                         (rule 9)

	'!'            reduce using rule 9
	'('            reduce using rule 9
	'-'            reduce using rule 9
	';'            reduce using rule 9
	'bool'         reduce using rule 9
	'count'        reduce using rule 9
	'false'        reduce using rule 9
	'for'          reduce using rule 9
	'get'          reduce using rule 9
	'if'           reduce using rule 9
	'int'          reduce using rule 9
	'return'       reduce using rule 9
	'string'       reduce using rule 9
	'true'         reduce using rule 9
	'while'        reduce using rule 9
	L_ident        reduce using rule 9
	L_integ        reduce using rule 9
	L_quoted       reduce using rule 9
	%eof           reduce using rule 9


State 6

	Decl -> BasicType . ListVarDeclItem ';'             (rule 5)
	Decl -> BasicType . Ident '(' ListFuncDeclItem ')' '{' ListDecl ListStmt 'return' Expr ';' '}'    (rule 7)
	ArrType -> BasicType . ListAcc                      (rule 36)

	'['            reduce using rule 42
	L_ident        shift, and enter state 2
			(reduce using rule 42)


	Ident          goto state 14
	VarDeclItem    goto state 12
	ListVarDeclItemgoto state 15
	ListAcc        goto state 16

State 7

	Decl -> ArrType . ListVarDeclItem ';'               (rule 6)

	L_ident        shift, and enter state 2

	Ident          goto state 11
	VarDeclItem    goto state 12
	ListVarDeclItemgoto state 13

State 8

	BasicType -> 'bool' .                               (rule 35)

	'['            reduce using rule 35
	L_ident        reduce using rule 35


State 9

	BasicType -> 'int' .                                (rule 33)

	'['            reduce using rule 33
	L_ident        reduce using rule 33


State 10

	BasicType -> 'string' .                             (rule 34)

	'['            reduce using rule 34
	L_ident        reduce using rule 34


State 11

	VarDeclItem -> Ident .                              (rule 10)
	VarDeclItem -> Ident . '=' Expr                     (rule 11)

	','            reduce using rule 10
	';'            reduce using rule 10
	'='            shift, and enter state 21


State 12

	ListVarDeclItem -> VarDeclItem .                    (rule 12)
	ListVarDeclItem -> VarDeclItem . ',' ListVarDeclItem    (rule 13)

	','            shift, and enter state 23
	';'            reduce using rule 12


State 13

	Decl -> ArrType ListVarDeclItem . ';'               (rule 6)

	';'            shift, and enter state 22


State 14

	Decl -> BasicType Ident . '(' ListFuncDeclItem ')' '{' ListDecl ListStmt 'return' Expr ';' '}'    (rule 7)
	VarDeclItem -> Ident .                              (rule 10)
	VarDeclItem -> Ident . '=' Expr                     (rule 11)

	'('            shift, and enter state 20
	','            reduce using rule 10
	';'            reduce using rule 10
	'='            shift, and enter state 21


State 15

	Decl -> BasicType ListVarDeclItem . ';'             (rule 5)

	';'            shift, and enter state 19


State 16

	ArrType -> BasicType ListAcc .                      (rule 36)
	ListAcc -> ListAcc . Acc                            (rule 43)

	'['            shift, and enter state 18
	L_ident        reduce using rule 36

	Acc            goto state 17

State 17

	ListAcc -> ListAcc Acc .                            (rule 43)

	'!='           reduce using rule 43
	'%'            reduce using rule 43
	'&&'           reduce using rule 43
	')'            reduce using rule 43
	'*'            reduce using rule 43
	'+'            reduce using rule 43
	','            reduce using rule 43
	'-'            reduce using rule 43
	'/'            reduce using rule 43
	';'            reduce using rule 43
	'<'            reduce using rule 43
	'<='           reduce using rule 43
	'='            reduce using rule 43
	'=='           reduce using rule 43
	'>'            reduce using rule 43
	'>='           reduce using rule 43
	'['            reduce using rule 43
	']'            reduce using rule 43
	'with'         reduce using rule 43
	'||'           reduce using rule 43
	L_ident        reduce using rule 43


State 18

	Acc -> '[' . Expr ']'                               (rule 41)

	'!'            shift, and enter state 38
	'('            shift, and enter state 39
	'-'            shift, and enter state 40
	'false'        shift, and enter state 41
	'get'          shift, and enter state 42
	'true'         shift, and enter state 43
	L_ident        shift, and enter state 2
	L_integ        shift, and enter state 44
	L_quoted       shift, and enter state 45

	Ident          goto state 25
	Integer        goto state 26
	String         goto state 27
	Literal        goto state 28
	Expr7          goto state 29
	Expr6          goto state 30
	Expr5          goto state 31
	Expr4          goto state 32
	Expr3          goto state 33
	Expr2          goto state 34
	Expr1          goto state 35
	Expr           goto state 49
	GetCost        goto state 37

State 19

	Decl -> BasicType ListVarDeclItem ';' .             (rule 5)

	'!'            reduce using rule 5
	'('            reduce using rule 5
	'-'            reduce using rule 5
	';'            reduce using rule 5
	'bool'         reduce using rule 5
	'count'        reduce using rule 5
	'false'        reduce using rule 5
	'for'          reduce using rule 5
	'get'          reduce using rule 5
	'if'           reduce using rule 5
	'int'          reduce using rule 5
	'return'       reduce using rule 5
	'string'       reduce using rule 5
	'true'         reduce using rule 5
	'while'        reduce using rule 5
	L_ident        reduce using rule 5
	L_integ        reduce using rule 5
	L_quoted       reduce using rule 5
	%eof           reduce using rule 5


State 20

	Decl -> BasicType Ident '(' . ListFuncDeclItem ')' '{' ListDecl ListStmt 'return' Expr ';' '}'    (rule 7)

	')'            reduce using rule 15
	'bool'         shift, and enter state 8
	'int'          shift, and enter state 9
	'string'       shift, and enter state 10

	FuncDeclItem   goto state 46
	ListFuncDeclItemgoto state 47
	BasicType      goto state 48

State 21

	VarDeclItem -> Ident '=' . Expr                     (rule 11)

	'!'            shift, and enter state 38
	'('            shift, and enter state 39
	'-'            shift, and enter state 40
	'false'        shift, and enter state 41
	'get'          shift, and enter state 42
	'true'         shift, and enter state 43
	L_ident        shift, and enter state 2
	L_integ        shift, and enter state 44
	L_quoted       shift, and enter state 45

	Ident          goto state 25
	Integer        goto state 26
	String         goto state 27
	Literal        goto state 28
	Expr7          goto state 29
	Expr6          goto state 30
	Expr5          goto state 31
	Expr4          goto state 32
	Expr3          goto state 33
	Expr2          goto state 34
	Expr1          goto state 35
	Expr           goto state 36
	GetCost        goto state 37

State 22

	Decl -> ArrType ListVarDeclItem ';' .               (rule 6)

	'!'            reduce using rule 6
	'('            reduce using rule 6
	'-'            reduce using rule 6
	';'            reduce using rule 6
	'bool'         reduce using rule 6
	'count'        reduce using rule 6
	'false'        reduce using rule 6
	'for'          reduce using rule 6
	'get'          reduce using rule 6
	'if'           reduce using rule 6
	'int'          reduce using rule 6
	'return'       reduce using rule 6
	'string'       reduce using rule 6
	'true'         reduce using rule 6
	'while'        reduce using rule 6
	L_ident        reduce using rule 6
	L_integ        reduce using rule 6
	L_quoted       reduce using rule 6
	%eof           reduce using rule 6


State 23

	ListVarDeclItem -> VarDeclItem ',' . ListVarDeclItem    (rule 13)

	L_ident        shift, and enter state 2

	Ident          goto state 11
	VarDeclItem    goto state 12
	ListVarDeclItemgoto state 24

State 24

	ListVarDeclItem -> VarDeclItem ',' ListVarDeclItem .    (rule 13)

	';'            reduce using rule 13


State 25

	Expr7 -> Ident . '(' ListExpr ')'                   (rule 47)
	Expr7 -> Ident . ListAcc                            (rule 48)

	'!='           reduce using rule 42
	'%'            reduce using rule 42
	'&&'           reduce using rule 42
	'('            shift, and enter state 80
	')'            reduce using rule 42
	'*'            reduce using rule 42
	'+'            reduce using rule 42
	','            reduce using rule 42
	'-'            reduce using rule 42
	'/'            reduce using rule 42
	';'            reduce using rule 42
	'<'            reduce using rule 42
	'<='           reduce using rule 42
	'=='           reduce using rule 42
	'>'            reduce using rule 42
	'>='           reduce using rule 42
	'['            reduce using rule 42
	']'            reduce using rule 42
	'with'         reduce using rule 42
	'||'           reduce using rule 42

	ListAcc        goto state 79

State 26

	Literal -> Integer .                                (rule 37)

	'!='           reduce using rule 37
	'%'            reduce using rule 37
	'&&'           reduce using rule 37
	')'            reduce using rule 37
	'*'            reduce using rule 37
	'+'            reduce using rule 37
	','            reduce using rule 37
	'-'            reduce using rule 37
	'/'            reduce using rule 37
	';'            reduce using rule 37
	'<'            reduce using rule 37
	'<='           reduce using rule 37
	'=='           reduce using rule 37
	'>'            reduce using rule 37
	'>='           reduce using rule 37
	']'            reduce using rule 37
	'with'         reduce using rule 37
	'||'           reduce using rule 37


State 27

	Literal -> String .                                 (rule 38)

	'!='           reduce using rule 38
	'%'            reduce using rule 38
	'&&'           reduce using rule 38
	')'            reduce using rule 38
	'*'            reduce using rule 38
	'+'            reduce using rule 38
	','            reduce using rule 38
	'-'            reduce using rule 38
	'/'            reduce using rule 38
	';'            reduce using rule 38
	'<'            reduce using rule 38
	'<='           reduce using rule 38
	'=='           reduce using rule 38
	'>'            reduce using rule 38
	'>='           reduce using rule 38
	']'            reduce using rule 38
	'with'         reduce using rule 38
	'||'           reduce using rule 38


State 28

	Expr7 -> Literal .                                  (rule 44)

	'!='           reduce using rule 44
	'%'            reduce using rule 44
	'&&'           reduce using rule 44
	')'            reduce using rule 44
	'*'            reduce using rule 44
	'+'            reduce using rule 44
	','            reduce using rule 44
	'-'            reduce using rule 44
	'/'            reduce using rule 44
	';'            reduce using rule 44
	'<'            reduce using rule 44
	'<='           reduce using rule 44
	'=='           reduce using rule 44
	'>'            reduce using rule 44
	'>='           reduce using rule 44
	']'            reduce using rule 44
	'with'         reduce using rule 44
	'||'           reduce using rule 44


State 29

	Expr6 -> Expr7 .                                    (rule 52)

	'!='           reduce using rule 52
	'%'            reduce using rule 52
	'&&'           reduce using rule 52
	')'            reduce using rule 52
	'*'            reduce using rule 52
	'+'            reduce using rule 52
	','            reduce using rule 52
	'-'            reduce using rule 52
	'/'            reduce using rule 52
	';'            reduce using rule 52
	'<'            reduce using rule 52
	'<='           reduce using rule 52
	'=='           reduce using rule 52
	'>'            reduce using rule 52
	'>='           reduce using rule 52
	']'            reduce using rule 52
	'with'         reduce using rule 52
	'||'           reduce using rule 52


State 30

	Expr5 -> Expr6 .                                    (rule 54)

	'!='           reduce using rule 54
	'%'            reduce using rule 54
	'&&'           reduce using rule 54
	')'            reduce using rule 54
	'*'            reduce using rule 54
	'+'            reduce using rule 54
	','            reduce using rule 54
	'-'            reduce using rule 54
	'/'            reduce using rule 54
	';'            reduce using rule 54
	'<'            reduce using rule 54
	'<='           reduce using rule 54
	'=='           reduce using rule 54
	'>'            reduce using rule 54
	'>='           reduce using rule 54
	']'            reduce using rule 54
	'with'         reduce using rule 54
	'||'           reduce using rule 54


State 31

	Expr5 -> Expr5 . MulOp Expr6                        (rule 53)
	Expr4 -> Expr5 .                                    (rule 56)

	'!='           reduce using rule 56
	'%'            shift, and enter state 76
	'&&'           reduce using rule 56
	')'            reduce using rule 56
	'*'            shift, and enter state 77
	'+'            reduce using rule 56
	','            reduce using rule 56
	'-'            reduce using rule 56
	'/'            shift, and enter state 78
	';'            reduce using rule 56
	'<'            reduce using rule 56
	'<='           reduce using rule 56
	'=='           reduce using rule 56
	'>'            reduce using rule 56
	'>='           reduce using rule 56
	']'            reduce using rule 56
	'with'         reduce using rule 56
	'||'           reduce using rule 56

	MulOp          goto state 75

State 32

	Expr4 -> Expr4 . AddOp Expr5                        (rule 55)
	Expr3 -> Expr4 .                                    (rule 58)

	'!='           reduce using rule 58
	'&&'           reduce using rule 58
	')'            reduce using rule 58
	'+'            shift, and enter state 73
	','            reduce using rule 58
	'-'            shift, and enter state 74
	';'            reduce using rule 58
	'<'            reduce using rule 58
	'<='           reduce using rule 58
	'=='           reduce using rule 58
	'>'            reduce using rule 58
	'>='           reduce using rule 58
	']'            reduce using rule 58
	'with'         reduce using rule 58
	'||'           reduce using rule 58

	AddOp          goto state 72

State 33

	Expr3 -> Expr3 . RelOp Expr4                        (rule 57)
	Expr2 -> Expr3 .                                    (rule 60)

	'!='           reduce using rule 60
	'&&'           reduce using rule 60
	')'            reduce using rule 60
	','            reduce using rule 60
	';'            reduce using rule 60
	'<'            shift, and enter state 68
	'<='           shift, and enter state 69
	'=='           reduce using rule 60
	'>'            shift, and enter state 70
	'>='           shift, and enter state 71
	']'            reduce using rule 60
	'with'         reduce using rule 60
	'||'           reduce using rule 60

	RelOp          goto state 67

State 34

	Expr2 -> Expr2 . EqOp Expr3                         (rule 59)
	Expr1 -> Expr2 . AndOp Expr1                        (rule 61)
	Expr1 -> Expr2 .                                    (rule 62)

	'!='           shift, and enter state 64
	'&&'           shift, and enter state 65
	')'            reduce using rule 62
	','            reduce using rule 62
	';'            reduce using rule 62
	'=='           shift, and enter state 66
	']'            reduce using rule 62
	'with'         reduce using rule 62
	'||'           reduce using rule 62

	EqOp           goto state 62
	AndOp          goto state 63

State 35

	Expr -> Expr1 . OrOp Expr                           (rule 63)
	Expr -> Expr1 .                                     (rule 64)

	')'            reduce using rule 64
	','            reduce using rule 64
	';'            reduce using rule 64
	']'            reduce using rule 64
	'with'         reduce using rule 64
	'||'           shift, and enter state 61

	OrOp           goto state 60

State 36

	VarDeclItem -> Ident '=' Expr .                     (rule 11)

	','            reduce using rule 11
	';'            reduce using rule 11


State 37
